bug fix: In Router class using str instead of Literal[*options] due to syntax limitations

--- a/docs/docs/tutorials/multi_agent/hierarchical_agent_teams.ipynb
+++ b/docs/docs/tutorials/multi_agent/hierarchical_agent_teams.ipynb
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e09fb60f-1aac-455b-b67d-8d2e4ccfd747",
    "metadata": {
     "ExecuteTime": {
@@ -285,7 +285,7 @@
    },
    "outputs": [],
    "source": [
-    "from typing import List, Optional, Literal\n",
+    "from typing import List, Optional, Literal, Callable, Any\n",
     "from langchain_core.language_models.chat_models import BaseChatModel\n",
     "\n",
     "from langgraph.graph import StateGraph, MessagesState, START, END\n",
@@ -297,8 +297,9 @@
     "    next: str\n",
     "\n",
     "\n",
-    "def make_supervisor_node(llm: BaseChatModel, members: list[str]) -> str:\n",
+    "def make_supervisor_node(llm: BaseChatModel, members: list[str]) -> Callable[[State], Command[Any]]:\n",
     "    options = [\"FINISH\"] + members\n",
+    "    \n",
     "    system_prompt = (\n",
     "        \"You are a supervisor tasked with managing a conversation between the\"\n",
     "        f\" following workers: {members}. Given the following user request,\"\n",
@@ -309,16 +310,20 @@
     "\n",
     "    class Router(TypedDict):\n",
     "        \"\"\"Worker to route to next. If no workers needed, route to FINISH.\"\"\"\n",
+    "        next: str \n",
     "\n",
-    "        next: Literal[*options]\n",
-    "\n",
-    "    def supervisor_node(state: State) -> Command[Literal[*members, \"__end__\"]]:\n",
+    "    def supervisor_node(state: State) -> Command[Literal[\"__end__\"]]:\n",
     "        \"\"\"An LLM-based router.\"\"\"\n",
     "        messages = [\n",
     "            {\"role\": \"system\", \"content\": system_prompt},\n",
     "        ] + state[\"messages\"]\n",
     "        response = llm.with_structured_output(Router).invoke(messages)\n",
     "        goto = response[\"next\"]\n",
+    "        \n",
+    "        # Runtime validation to ensure only valid options are used\n",
+    "        if goto not in options:\n",
+    "            raise ValueError(f\"Invalid routing option: {goto}. Valid options: {options}\")\n",
+    "            \n",
     "        if goto == \"FINISH\":\n",
     "            goto = END\n",
     "\n",
