Fixed a few typos

--- a/docs/docs/tutorials/rag/langgraph_adaptive_rag.ipynb
+++ b/docs/docs/tutorials/rag/langgraph_adaptive_rag.ipynb
@@ -210,7 +210,7 @@
     "\n",
     "    datasource: Literal[\"vectorstore\", \"web_search\"] = Field(\n",
     "        ...,\n",
-    "        description=\"Given a user question choose to route it to web search or a vectorstore.\",\n",
+    "        description=\"Given a user question, choose to route it to web search or a vectorstore.\",\n",
     "    )\n",
     "\n",
     "\n",
@@ -446,7 +446,7 @@
     "\n",
     "# Prompt\n",
     "system = \"\"\"You are a grader assessing whether an answer addresses / resolves a question \\n \n",
-    "     Give a binary score 'yes' or 'no'. Yes' means that the answer resolves the question.\"\"\"\n",
+    "     Give a binary score 'yes' or 'no'. 'Yes' means that the answer resolves the question.\"\"\"\n",
     "answer_prompt = ChatPromptTemplate.from_messages(\n",
     "    [\n",
     "        (\"system\", system),\n",
@@ -759,7 +759,7 @@
     "\n",
     "def grade_generation_v_documents_and_question(state):\n",
     "    \"\"\"\n",
-    "    Determines whether the generation is grounded in the document and answers question.\n",
+    "    Determines whether the generation is grounded in the document and answers the question.\n",
     "\n",
     "    Args:\n",
     "        state (dict): The current graph state\n",
