refactor: renaming class BaseCheckpointSaver to BaseCheckpointer for clarity

--- a/docs/docs/how-tos/persistence-functional.ipynb
+++ b/docs/docs/how-tos/persistence-functional.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "Many AI applications need memory to share context across multiple interactions on the same [thread](../../concepts/persistence#threads) (e.g., multiple turns of a conversation). In LangGraph functional API, this kind of memory can be added to any [entrypoint()][langgraph.func.entrypoint] workflow using [thread-level persistence](https://langchain-ai.github.io/langgraph/concepts/persistence).\n",
     "\n",
-    "When creating a LangGraph workflow, you can set it up to persist its results by using a [checkpointer](https://langchain-ai.github.io/langgraph/reference/checkpoints/#basecheckpointsaver):\n",
+    "When creating a LangGraph workflow, you can set it up to persist its results by using a [checkpointer](https://langchain-ai.github.io/langgraph/reference/checkpoints/#BaseCheckpointer):\n",
     "\n",
     "\n",
     "1. Create an instance of a checkpointer:\n",
@@ -171,7 +171,7 @@
    "id": "7b7a2792-982b-4e47-83eb-0c594725d1c1",
    "metadata": {},
    "source": [
-    "Now we can define our task and workflow. To add in persistence, we need to pass in a [Checkpointer](https://langchain-ai.github.io/langgraph/reference/checkpoints/#langgraph.checkpoint.base.BaseCheckpointSaver) to the [entrypoint()][langgraph.func.entrypoint] decorator."
+    "Now we can define our task and workflow. To add in persistence, we need to pass in a [Checkpointer](https://langchain-ai.github.io/langgraph/reference/checkpoints/#langgraph.checkpoint.base.BaseCheckpointer) to the [entrypoint()][langgraph.func.entrypoint] decorator."
    ]
   },
   {
