renaming InMemorySaver to InMemoryCheckpointer for consistency and adding backward compatibility

--- a/docs/docs/how-tos/autogen-integration-functional.ipynb
+++ b/docs/docs/how-tos/autogen-integration-functional.ipynb
@@ -173,7 +173,7 @@
     "from langchain_core.messages import convert_to_openai_messages, BaseMessage\n",
     "from langgraph.func import entrypoint, task\n",
     "from langgraph.graph import add_messages\n",
-    "from langgraph.checkpoint.memory import InMemorySaver\n",
+    "from langgraph.checkpoint.memory import InMemoryCheckpointer\n",
     "\n",
     "\n",
     "@task\n",
@@ -192,7 +192,7 @@
     "\n",
     "\n",
     "# add short-term memory for storing conversation history\n",
-    "checkpointer = InMemorySaver()\n",
+    "checkpointer = InMemoryCheckpointer()\n",
     "\n",
     "\n",
     "@entrypoint(checkpointer=checkpointer)\n",
