--- a/docs/docs/how-tos/create-react-agent-manage-message-history.ipynb
+++ b/docs/docs/how-tos/create-react-agent-manage-message-history.ipynb
@@ -51,7 +51,7 @@
     "        # highlight-next-line\n",
     "        return {\"llm_input_messages\": trimmed_messages}\n",
     "\n",
-    "    checkpointer = InMemorySaver()\n",
+    "    checkpointer = InMemoryCheckpointer()\n",
     "    agent = create_react_agent(\n",
     "        model,\n",
     "        tools,\n",
@@ -67,7 +67,7 @@
     "    from langmem.short_term import SummarizationNode\n",
     "    from langchain_core.messages.utils import count_tokens_approximately\n",
     "    from langgraph.prebuilt.chat_agent_executor import AgentState\n",
-    "    from langgraph.checkpoint.memory import InMemorySaver\n",
+    "    from langgraph.checkpoint.memory import InMemoryCheckpointer\n",
     "    from typing import Any\n",
     "    \n",
     "    model = ChatOpenAI(model=\"gpt-4o\")\n",
@@ -87,7 +87,7 @@
     "        context: dict[str, Any]\n",
     "    \n",
     "    \n",
-    "    checkpointer = InMemorySaver()\n",
+    "    checkpointer = InMemoryCheckpointer()\n",
     "    graph = create_react_agent(\n",
     "        model,\n",
     "        tools,\n",
@@ -238,7 +238,7 @@
    "outputs": [],
    "source": [
     "from langgraph.prebuilt import create_react_agent\n",
-    "from langgraph.checkpoint.memory import InMemorySaver\n",
+    "from langgraph.checkpoint.memory import InMemoryCheckpointer\n",
     "\n",
     "# highlight-next-line\n",
     "from langchain_core.messages.utils import (\n",
@@ -266,7 +266,7 @@
     "    return {\"llm_input_messages\": trimmed_messages}\n",
     "\n",
     "\n",
-    "checkpointer = InMemorySaver()\n",
+    "checkpointer = InMemoryCheckpointer()\n",
     "graph = create_react_agent(\n",
     "    model,\n",
     "    tools,\n",
@@ -517,7 +517,7 @@
     "    return {\"messages\": [RemoveMessage(REMOVE_ALL_MESSAGES)] + trimmed_messages}\n",
     "\n",
     "\n",
-    "checkpointer = InMemorySaver()\n",
+    "checkpointer = InMemoryCheckpointer()\n",
     "graph = create_react_agent(\n",
     "    model,\n",
     "    tools,\n",
@@ -689,7 +689,7 @@
     "    context: dict[str, Any]\n",
     "\n",
     "\n",
-    "checkpointer = InMemorySaver()\n",
+    "checkpointer = InMemoryCheckpointer()\n",
     "graph = create_react_agent(\n",
     "    # limit the output size to ensure consistent behavior\n",
     "    model.bind(max_tokens=256),\n",
