--- a/docs/docs/tutorials/tot/tot.ipynb
+++ b/docs/docs/tutorials/tot/tot.ipynb
@@ -282,7 +282,7 @@
     "from langgraph.graph import StateGraph\n",
     "from langgraph.runtime import Runtime\n",
     "\n",
-    "from langgraph.checkpoint.memory import InMemorySaver\n",
+    "from langgraph.checkpoint.memory import InMemoryCheckpointer\n",
     "from langgraph.types import Send\n",
     "\n",
     "\n",
@@ -416,7 +416,7 @@
     "builder.add_edge(\"__start__\", \"expand\")\n",
     "\n",
     "# Compile the graph\n",
-    "graph = builder.compile(checkpointer=InMemorySaver())"
+    "graph = builder.compile(checkpointer=InMemoryCheckpointer())"
    ]
   },
   {
