--- a/docs/docs/how-tos/persistence-functional.ipynb
+++ b/docs/docs/how-tos/persistence-functional.ipynb
@@ -28,9 +28,9 @@
     "1. Create an instance of a checkpointer:\n",
     "\n",
     "    ```python\n",
-    "    from langgraph.checkpoint.memory import InMemorySaver\n",
+    "    from langgraph.checkpoint.memory import InMemoryCheckpointer\n",
     "    \n",
-    "    checkpointer = InMemorySaver()       \n",
+    "    checkpointer = InMemoryCheckpointer()       \n",
     "    ```\n",
     "\n",
     "2. Pass `checkpointer` instance to the `entrypoint()` decorator:\n",
@@ -184,7 +184,7 @@
     "from langchain_core.messages import BaseMessage\n",
     "from langgraph.graph import add_messages\n",
     "from langgraph.func import entrypoint, task\n",
-    "from langgraph.checkpoint.memory import InMemorySaver\n",
+    "from langgraph.checkpoint.memory import InMemoryCheckpointer\n",
     "\n",
     "\n",
     "@task\n",
@@ -193,7 +193,7 @@
     "    return response\n",
     "\n",
     "\n",
-    "checkpointer = InMemorySaver()\n",
+    "checkpointer = InMemoryCheckpointer()\n",
     "\n",
     "\n",
     "@entrypoint(checkpointer=checkpointer)\n",
