--- a/docs/docs/tutorials/chatbots/information-gather-prompting.ipynb
+++ b/docs/docs/tutorials/chatbots/information-gather-prompting.ipynb
@@ -256,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langgraph.checkpoint.memory import InMemorySaver\n",
+    "from langgraph.checkpoint.memory import InMemoryCheckpointer\n",
     "from langgraph.graph import StateGraph, START\n",
     "from langgraph.graph.message import add_messages\n",
     "from typing import Annotated\n",
@@ -267,7 +267,7 @@
     "    messages: Annotated[list, add_messages]\n",
     "\n",
     "\n",
-    "memory = InMemorySaver()\n",
+    "memory = InMemoryCheckpointer()\n",
     "workflow = StateGraph(State)\n",
     "workflow.add_node(\"info\", info_chain)\n",
     "workflow.add_node(\"prompt\", prompt_gen_chain)\n",
