renaming AsyncSqliteSaver, SqliteSaver, AsyncPostgresSaver  to AsyncSqliteCheckpointer, SqliteCheckpointer, AsyncPostgresCheckpointer for consistency and adding backward compatibility

--- a/docs/docs/tutorials/chatbots/information-gather-prompting.ipynb
+++ b/docs/docs/tutorials/chatbots/information-gather-prompting.ipynb
@@ -246,7 +246,7 @@
     "## Create the graph\n",
     "\n",
     "We can now the create the graph.\n",
-    "We will use a SqliteSaver to persist conversation history."
+    "We will use a SqliteCheckpointer to persist conversation history."
    ]
   },
   {
