Fix the parameter passing of seed in state

--- a/docs/docs/tutorials/tot/tot.ipynb
+++ b/docs/docs/tutorials/tot/tot.ipynb
@@ -394,7 +394,7 @@
     "    if solved or state[\"depth\"] >= ctx[\"max_depth\"]:\n",
     "        return \"__end__\"\n",
     "    return [\n",
-    "        Send(\"expand\", {**state, \"somevalseed\": candidate})\n",
+    "        Send(\"expand\", {**state, \"seed\": candidate})\n",
     "        for candidate in state[\"candidates\"]\n",
     "    ]\n",
     "\n",
