fix: update redirect URL for multi-agent-collaboration notebook
Fixes #2236

The old redirect pointed to a non-existent location in the Python repo.
Updated to point to the correct location in the langgraphjs repository.

The file is now at:
https://github.com/langchain-ai/langgraphjs/blob/main/examples/multi_agent/multi_agent_collaboration.ipynb

--- a/examples/multi_agent/multi-agent-collaboration.ipynb
+++ b/examples/multi_agent/multi-agent-collaboration.ipynb
@@ -5,7 +5,9 @@
    "id": "d2b507b9",
    "metadata": {},
    "source": [
-    "This file has been moved to https://github.com/langchain-ai/langgraph/blob/main/docs/docs/tutorials/multi_agent/multi-agent-collaboration.ipynb"
+    "This file has been moved to https://github.com/langchain-ai/langgraphjs/blob/main/examples/multi_agent/multi_agent_collaboration.ipynb\n",
+    "\n",
+    "Note: This is the JavaScript/TypeScript version. For Python examples, see the LangGraph Python tutorials."
    ]
   }
  ],
