--- a/examples/rag/langgraph_agentic_rag.ipynb
+++ b/examples/rag/langgraph_agentic_rag.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "47e3b43b",
+   "metadata": {},
+   "source": [
+    "This directory is retained purely for archival purposes and is no longer updated. Please see the newly [consolidated LangChain documentation](https://docs.langchain.com/oss/python/langgraph/overview) for the most current information and resources."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "425fb020-e864-40ce-a31f-8da40c73d14b",
    "metadata": {},
    "source": [
@@ -200,11 +208,11 @@
      "output_type": "stream",
      "text": [
       "********************Prompt[rlm/rag-prompt]********************\n",
-      "================================\u001B[1m Human Message \u001B[0m=================================\n",
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
       "\n",
       "You are an assistant for question-answering tasks. Use the following pieces of retrieved context to answer the question. If you don't know the answer, just say that you don't know. Use three sentences maximum and keep the answer concise.\n",
-      "Question: \u001B[33;1m\u001B[1;3m{question}\u001B[0m \n",
-      "Context: \u001B[33;1m\u001B[1;3m{context}\u001B[0m \n",
+      "Question: \u001b[33;1m\u001b[1;3m{question}\u001b[0m \n",
+      "Context: \u001b[33;1m\u001b[1;3m{context}\u001b[0m \n",
       "Answer:\n"
      ]
     }
