--- a/examples/customer-support/customer-support.ipynb
+++ b/examples/customer-support/customer-support.ipynb
@@ -5,7 +5,15 @@
    "id": "a8232bc9",
    "metadata": {},
    "source": [
-    "This file has been moved to https://github.com/langchain-ai/langgraph/blob/main/docs/docs/tutorials/customer-support/customer-support.ipynb"
+    "[This file has been moved](https://github.com/langchain-ai/langgraph/blob/23961cff61a42b52525f3b20b4094d8d2fba1744/docs/docs/tutorials/customer-support/customer-support.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63da8671",
+   "metadata": {},
+   "source": [
+    "This directory is retained purely for archival purposes and is no longer updated. The examples previously found here have been moved to the newly [consolidated LangChain documentation](https://docs.langchain.com/oss/python/langgraph/overview)."
    ]
   }
  ],
